# qe_level_2_simpass_uuid_order

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: build.yml
deploy/: Dockerfile  Dockerfile.bench  docker-compose.bench.yml  docker-compose.horizontal.yml  nginx.conf.example
examples/: stress_test.rs  test_redis.rs
migrations/init/: 001_migrations_table.sql  002_developers_table.sql  003_deduction_transactions_table.sql  004_qps_records_table.sql  005_request_logs_table.sql  006_system_configs_table.sql
migrations/sqlite/: 001_migrations_table.sql  002_developers_table.sql  003_deduction_transactions_table.sql  004_qps_records_table.sql  005_request_logs_table.sql  006_system_configs_table.sql
scripts/: benchmark.py  build-production.sh  run-bench.sh
src/: config.rs  errors.rs  main.rs
src/cache/: backend.rs  memory.rs  mod.rs  redis.rs
src/db/: backend.rs  health.rs  migrations.rs  mod.rs  pg_pool.rs  redis_pool.rs
src/handlers/: deduction.rs  developer.rs  mod.rs  qps.rs  system_config.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs
src/models/: developer.rs  mod.rs  qps.rs  response.rs  system_config.rs  transaction.rs
src/repositories/: developer.rs  mod.rs  transaction.rs
src/services/: deduction.rs  mod.rs  qps.rs  system_config.rs
src/tasks/: expiration.rs  mod.rs  recovery.rs
vue-frontend/: index.html  package-lock.json  package.json  vite.config.js
vue-frontend/src/: App.vue  main.js
vue-frontend/src/api/: index.js
vue-frontend/src/router/: index.js
(+5 files in other folders)
